WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34594
Web Inspector: Cookies for resources are not shown in storage panel.
https://bugs.webkit.org/show_bug.cgi?id=34594
Summary
Web Inspector: Cookies for resources are not shown in storage panel.
Pavel Feldman
Reported
2010-02-04 08:27:48 PST
Only document url's cookies are being displayed.
Attachments
[PATCH] Proposed fix.
(3.74 KB, patch)
2010-02-04 08:29 PST
,
Pavel Feldman
timothy
: review+
pfeldman
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-02-04 08:29:51 PST
Created
attachment 48146
[details]
[PATCH] Proposed fix.
Pavel Feldman
Comment 2
2010-02-04 08:39:59 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorController.cpp M WebCore/inspector/InspectorResource.cpp M WebCore/inspector/InspectorResource.h Committed
r54343
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug